--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     // App dependencies
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
     implementation "androidx.legacy:legacy-support-v4:$androidXLegacySupport"
-    implementation "androidx.annotation:annotation:$androidXAnnotations"
+    implementation "androidx.annotation:annotation:1.3.0"
 
     implementation "androidx.cardview:cardview:$cardVersion"
     implementation "com.google.android.material:material:$materialVersion"
