--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -49,14 +49,14 @@ ext {
     recyclerViewVersion = '1.2.1'
     mockitoVersion = '2.8.9'
     constraintVersion = '2.1.3'
-    dexMakerVersion = '2.12.1'
-    coroutinesVersion = '1.3.7'
+    dexMakerVersion = '2.28.1'
+    coroutinesVersion = '1.6.0-native-mt'
     roomVersion = '2.4.1'
     koinVersion = '3.0.1'
     truthVersion = '0.44'
     junitVersion = '4.13.2'
     androidXTestCoreVersion = '1.4.1-alpha03'
-    robolectricVersion = '4.3.1'
+    robolectricVersion = '4.7.3'
     androidXTestExtKotlinRunnerVersion = '1.1.3'
     archTestingVersion = '2.1.0'
     playServicesVersion = '17.0.0'
