--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -124,7 +124,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-maps:$playServicesMapsVersion"
 
     // Firebase Auth
-    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    //implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
 
 }
